--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </header>
     <main>
         <div class="app">
-            <img src="/api/placeholder/100/100" alt="App 1 Icon">
+            <img src="/yosumappicon18lightv1.png" alt="App 1 Icon">
             <div class="app-info">
                 <h2>Yosum: Subscription Manager</h2>
                 <p>Your All-in-One Subscription Manager with a Global Touch
