--- a/index.html
+++ b/index.html
@@ -82,11 +82,19 @@ Discover the seamless world of subscription management with Yosum – your passp
             </div>
         </div>
         <div class="app">
-            <img src="/api/placeholder/100/100" alt="App 2 Icon">
+            <img src="Group 36.png" alt="App 2 Icon">
             <div class="app-info">
                 <h2>TuneTally</h2>
                 <p>The ultimate destination for music lovers who crave to explore and compare top hits across various popular music services and countries. Whether you're a fan of Apple Music, Spotify, Last.FM, KKBox, or more, TuneTally brings you the world of music through a beautifully designed, user-friendly interface.</p>
                 <a href="https://apps.apple.com/tw/app/tunetally-music-charts/id6475619227">Download on the App Store</a>
+            </div>
+        </div>
+        <div class="app">
+            <img src="1024.png" alt="App 3 Icon">
+            <div class="app-info">
+                <h2>PicPulse: Batch Image Resizer</h2>
+                <p>Introducing PicPulse – the NATIVE macOS app designed to revolutionize your photo resizing workflow. Whether you’re a developer preparing App Store previews, a designer adjusting images for various projects, or a photographer managing a large collection, PicPulse offers a seamless solution for batch resizing photos quickly and efficiently.</p>
+                <a href="https://apps.apple.com/tw/app/picpulse-batch-images-resizer/id6503602987?mt=12">Download on the App Store</a>
             </div>
         </div>
     </main>
