--- a/index.html
+++ b/index.html
@@ -3,107 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iOS Developer Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-        }
-        main {
-            padding: 2rem;
-            max-width: 800px;
-            margin: auto;
-            margin-bottom: 60px; /* Added to prevent content from being hidden behind footer */
-        }
-        .app {
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            margin-bottom: 2rem;
-            padding: 1rem;
-            display: flex;
-            align-items: center;
-        }
-        .app img {
-            width: 100px;
-            height: 100px;
-            margin-right: 1rem;
-            border-radius: 20px;
-        }
-        .app-info h2 {
-            margin-top: 0;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .social-links {
-            margin-top: 10px;
-        }
-        .social-links a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-        .social-links a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>2025 Universeye. All rights reserved.</title>
 </head>
 <body>
-    <header>
-        <h1>Hello. I'm Terry Kuo, a passionate iOS Developer</h1>
-    </header>
-    <main>
-        <div class="app">
-            <img src="/yosumappicon18lightv1.png" alt="App 1 Icon">
-            <div class="app-info">
-                <h2>Yosum: Subscription Manager</h2>
-                <p>Your All-in-One Subscription Manager with a Global Touch
-
-Yosum is your all-in-one subscription management solution with real-time exchange rates. Select different currencies for each subscription items. Receive timely alerts, effortlessly manage members within subscriptions, and categorize your expenses with ease. Experience the beauty of simplicity in subscription tracking. Take control of your bills!
-
-Discover the seamless world of subscription management with Yosum – your passport to financial simplicity. Tailor each subscription with different currencies, get real-time exchange rate total, and take charge of your expenses effortlessly. Personalize your financial journey, stay on top with timely alerts, and revolutionize the way you handle bills.</p>
-                <a href="https://apple.co/3QGAhfi">Download on the App Store</a>
-            </div>
-        </div>
-        <div class="app">
-            <img src="Group 36.png" alt="App 2 Icon">
-            <div class="app-info">
-                <h2>TuneTally</h2>
-                <p>The ultimate destination for music lovers who crave to explore and compare top hits across various popular music services and countries. Whether you're a fan of Apple Music, Spotify, Last.FM, KKBox, or more, TuneTally brings you the world of music through a beautifully designed, user-friendly interface.</p>
-                <a href="https://apps.apple.com/tw/app/tunetally-music-charts/id6475619227">Download on the App Store</a>
-            </div>
-        </div>
-        <div class="app">
-            <img src="1024.png" alt="App 3 Icon">
-            <div class="app-info">
-                <h2>PicPulse: Batch Image Resizer</h2>
-                <p>Introducing PicPulse – the NATIVE macOS app designed to revolutionize your photo resizing workflow. Whether you’re a developer preparing App Store previews, a designer adjusting images for various projects, or a photographer managing a large collection, PicPulse offers a seamless solution for batch resizing photos quickly and efficiently.</p>
-                <a href="https://apps.apple.com/tw/app/picpulse-batch-images-resizer/id6503602987?mt=12">Download on the App Store</a>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Universeye. All rights reserved.</p>
-        <div class="social-links">
-            <a href="https://twitter.com/yoyokuoo" target="_blank">X(Twitter)</a>
-            <a href="https://www.instagram.com/yoyokuoo/" target="_blank">Instagram</a>
-        </div>
-    </footer>
+    <h1>2025 Universeye. All rights reserved.</h1>
 </body>
 </html>
